@@ -3770,6 +3770,8 @@ interface IAnjutaDebugger
 			gchar *type;
 			gchar *value;
 			gboolean changed;
+			gboolean exited;
+			gboolean deleted;
 			gint children;
 		}
 
