@@ -160,7 +160,7 @@ typedef enum
 		NEED_PROGRAM_LOADED | NEED_PROGRAM_STOPPED,
 	DMA_REMOVE_BREAK_COMMAND =
 		REMOVE_BREAK_COMMAND |
-		NEED_PROGRAM_LOADED | NEED_PROGRAM_STOPPED,
+		NEED_PROGRAM_LOADED | NEED_PROGRAM_STOPPED | NEED_PROGRAM_RUNNING,
 	DMA_LIST_BREAK_COMMAND =
 		LIST_BREAK_COMMAND |
 		NEED_PROGRAM_LOADED | NEED_PROGRAM_STOPPED | NEED_PROGRAM_RUNNING,
@@ -256,7 +256,7 @@ typedef enum
 		NEED_PROGRAM_STOPPED,
 	DMA_CREATE_VARIABLE_COMMAND =
 	   CREATE_VARIABLE |
-		NEED_PROGRAM_STOPPED,
+		NEED_PROGRAM_STOPPED | NEED_PROGRAM_RUNNING,
 	DMA_EVALUATE_VARIABLE_COMMAND =
 	    EVALUATE_VARIABLE | CANCEL_IF_PROGRAM_RUNNING |
 	    NEED_PROGRAM_STOPPED,
@@ -265,7 +265,7 @@ typedef enum
 		NEED_PROGRAM_STOPPED,
 	DMA_DELETE_VARIABLE_COMMAND =
 		DELETE_VARIABLE |
-		NEED_PROGRAM_STOPPED,
+		NEED_PROGRAM_STOPPED | NEED_PROGRAM_RUNNING,
 	DMA_ASSIGN_VARIABLE_COMMAND =
 		ASSIGN_VARIABLE |
 		NEED_PROGRAM_STOPPED,
